changed back to dark text to see if that fixes infinite dark mode on my website

--- a/_sass/theme/_default.scss
+++ b/_sass/theme/_default.scss
@@ -42,7 +42,7 @@ $sidebar-screen-min-width   : 1024px;
     --global-masthead-link-color        : #{$dark-gray};
    
     --global-masthead-link-color-hover  : mix(#000, #{$gray}, 25%);    
-    --global-text-color                 : #{$light-gray};
+    --global-text-color                 : #{$dark-gray};
     --global-text-color-light           : #{$light-gray};
     --global-thead-color                : #{$lighter-gray};
 }
